--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 
 <body>
+    <header class="couch-camp-hero">
+        <h1>Couch Camp</h1>
+        <nav>
+            <ul>
+                <li>
+                    
+                </li>
+            </ul>
+        </nav>
+    </header>
+    
+
 
 </body>
 
