made changes to html added image folder with logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Couch Camp</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
   <body>
@@ -17,7 +17,7 @@
 <div class="top-bar" id="realEstateMenu">
   <div class="top-bar-left">
     <ul class="menu" data-responsive-menu="accordion">
-      <li class="menu-text">Interplanetary</li>
+      <li class="menu-text"><a href="#"><img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" /></a>Couch Camp</li>
       <li><a href="#">One</a></li>
       <li><a href="#">Two</a></li>
       <li><a href="#">Three</a></li>
