Edited the HTML and removed excess items from framework

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
   <body>
 
 <!-- Navigation -->
-<div class="title-bar" data-responsive-toggle="realEstateMenu" data-hide-for="small">
+<div class="title-bar" data-responsive-toggle="header" data-hide-for="small">
   <button class="menu-icon" type="button" data-toggle></button>
   <div class="title-bar-title">Menu</div>
 </div>
 
-<div class="top-bar" id="realEstateMenu">
-  <div class="top-bar-left">
+<div class="top-bar" id="header">
+  <img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" />
+ <!-- <div class="top-bar-left">
     <ul class="menu" data-responsive-menu="accordion">
       <li class="menu-text"><a href="#"><img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" /></a>Couch Camp</li>
       <li><a href="#">One</a></li>
       <li><a href="#">Two</a></li>
       <li><a href="#">Three</a></li>
     </ul>
-  </div>
+  </div> -->
   <div class="top-bar-right">
     <ul class="menu">
       <li><a href="#">My Account</a></li>
@@ -30,22 +31,15 @@
     </ul>
   </div>
 </div>
-<!-- /Navigation -->
+
 
 <br>
 
-<div class="row">
+<div class="row"></div>
 
-  <div class="medium-7 large-6 columns">
-    <h1>Close Your Eyes and Open Your Mind</h1>
-    <p class="subheader">There is beauty in space, and it is orderly. There is no weather, and there is regularity. It is predictable. Everything in space obeys the laws of physics. If you know these laws, and obey them, space will treat you kindly.</p>
-    <button class="button">Take a Tour</button>
-    <button class="button">Start a free trial</button>
-  </div>
-
-  <div class="show-for-large large-3 columns">
+  <!-- <div class="show-for-large large-3 columns">
     <img src="https://placehold.it/400x370&text=PSR1257 + 12 C" alt="picture of space">
-  </div>
+  </div> -->
 
   <div class="medium-5 large-3 columns">
     <div class="callout secondary">
@@ -134,7 +128,7 @@
 </div>
 
 <footer>
-  <div class="row expanded callout secondary">
+  <!-- <div class="row expanded callout secondary">
 
     <div class="small-6 large-3 columns">
       <p class="lead">Offices</p>
@@ -174,7 +168,7 @@
         <li><a href="#">Three</a></li>
         <li><a href="#">Four</a></li>
       </ul>
-    </div>
+    </div> -->
 
   </div>
   <div class="row">
