--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Couch Camp</title>
-    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  </head>
-  <body>
 
-<!-- Navigation -->
-<div class="title-bar" data-responsive-toggle="header" data-hide-for="small">
-  <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Menu</div>
-</div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Couch Camp</title>
+  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link rel="stylesheet" href="asstes/style.css">
+</head>
 
-<div class="top-bar" id="header">
-  <img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" />
- <!-- <div class="top-bar-left">
+<body>
+
+  <!-- Navigation -->
+  <div class="title-bar" data-responsive-toggle="header" data-hide-for="small">
+    <button class="menu-icon" type="button" data-toggle></button>
+    <div class="title-bar-title">Menu</div>
+  </div>
+
+  <div class="top-bar" id="header">
+    <img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" />
+    <!-- <div class="top-bar-left">
     <ul class="menu" data-responsive-menu="accordion">
       <li class="menu-text"><a href="#"><img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" /></a>Couch Camp</li>
       <li><a href="#">One</a></li>
@@ -24,22 +27,19 @@
       <li><a href="#">Three</a></li>
     </ul>
   </div> -->
-  <div class="top-bar-right">
-    <ul class="menu">
-      <li><a href="#">My Account</a></li>
-      <li><a class="button">Login</a></li>
-    </ul>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <li><a href="#">My Account</a></li>
+        <li><a class="button">Login</a></li>
+      </ul>
+    </div>
   </div>
-</div>
 
 
-<br>
+  <br>
 
-<div class="row"></div>
+  <div class="row"></div>
 
-  <!-- <div class="show-for-large large-3 columns">
-    <img src="https://placehold.it/400x370&text=PSR1257 + 12 C" alt="picture of space">
-  </div> -->
 
   <div class="medium-5 large-3 columns">
     <div class="callout secondary">
@@ -61,74 +61,74 @@
     </div>
   </div>
 
-</div>
-
-<div class="row column">
-  <hr>
-</div>
-
-<div class="row column">
-  <p class="lead">Trending Planetary Destinations</p>
-</div>
-
-<div class="row small-up-1 medium-up-2 large-up-3">
-  <div class="column">
-    <div class="callout">
-      <p>Pegasi B</p>
-      <p><img src="https://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B"></p>
-      <p class="lead">Copernican Revolution caused an uproar</p>
-      <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="callout">
-      <p>Pegasi B</p>
-      <p><img src="https://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B"></p>
-      <p class="lead">Copernican Revolution caused an uproar</p>
-      <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="callout">
-      <p>Pegasi B</p>
-      <p><img src="https://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B"></p>
-      <p class="lead">Copernican Revolution caused an uproar</p>
-      <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="callout">
-      <p>Pegasi B</p>
-      <p><img src="https://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B"></p>
-      <p class="lead">Copernican Revolution caused an uproar</p>
-      <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="callout">
-      <p>Pegasi B</p>
-      <p><img src="https://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B"></p>
-      <p class="lead">Copernican Revolution caused an uproar</p>
-      <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="callout">
-      <p>Pegasi B</p>
-      <p><img src="https://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B"></p>
-      <p class="lead">Copernican Revolution caused an uproar</p>
-      <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-    </div>
   </div>
 
-</div>
+  <div class="row column">
+    <hr>
+  </div>
 
-<div class="row column">
-  <a class="button hollow expanded">Load More</a>
-</div>
+  <div class="row column">
+    <p class="lead">Trending Planetary Destinations</p>
+  </div>
 
-<footer>
-  <!-- <div class="row expanded callout secondary">
+  <div class="row small-up-1 medium-up-2 large-up-3">
+    <div class="column">
+      <div class="callout">
+        <p>Pegasi B</p>
+        <p><img src="" alt="image of a planet called Pegasi B"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout">
+        <p>Pegasi B</p>
+        <p><img src="" alt="image of a planet called Pegasi B"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout">
+        <p>Pegasi B</p>
+        <p><img src="" alt="image of a planet called Pegasi B"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout">
+        <p>Pegasi B</p>
+        <p><img src="" alt="image of a planet called Pegasi B"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout">
+        <p>Pegasi B</p>
+        <p><img src="" alt="image of a planet called Pegasi B"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout">
+        <p>Pegasi B</p>
+        <p><img src="" alt="image of a planet called Pegasi B"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row column">
+    <a class="button hollow expanded">Load More</a>
+  </div>
+
+  <footer>
+    <!-- <div class="row expanded callout secondary">
 
     <div class="small-6 large-3 columns">
       <p class="lead">Offices</p>
@@ -170,30 +170,32 @@
       </ul>
     </div> -->
 
-  </div>
-  <div class="row">
+    </div>
+    <div class="row">
 
-    <div class="medium-6 columns">
-      <ul class="menu">
-        <li><a href="#">Legal</a></li>
-        <li><a href="#">Partner</a></li>
-        <li><a href="#">Explore</a></li>
-      </ul>
+      <div class="medium-6 columns">
+        <ul class="menu">
+          <li><a href="#">Legal</a></li>
+          <li><a href="#">Partner</a></li>
+          <li><a href="#">Explore</a></li>
+        </ul>
+      </div>
+
+      <div class="medium-6 columns">
+        <ul class="menu float-right">
+          <li class="menu-text">Copyright</li>
+        </ul>
+      </div>
     </div>
 
-    <div class="medium-6 columns">
-      <ul class="menu float-right">
-        <li class="menu-text">Copyright</li>
-      </ul>
-    </div>
-  </div>
+  </footer>
 
-</footer>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
+  <script src="asstes/script.js"></script>
+</body>
 
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
 </html>
