--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="en">
-<<<<<<< HEAD
 
 <head>
   <meta charset="utf-8" />
@@ -19,66 +18,30 @@
   </div>
 
   <div class="top-bar" id="header">
-    <img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" />
-    <!-- <div class="top-bar-left">
-=======
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Couch Camp</title>
-    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  </head>
-  <body>
-
-<!-- Navigation -->
-<div class="title-bar" data-responsive-toggle="header" data-hide-for="small">
-  <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Menu</div>
-</div>
-
-<div class="top-bar" id="header">
-  <img id="couch-camp-logo" src="" alt="Couch Camp Logo" />
- <!-- <div class="top-bar-left">
->>>>>>> 088ab7e63261f3d42e0acf73277522d42fcf5c1b
-    <ul class="menu" data-responsive-menu="accordion">
-      <li class="menu-text"><a href="#"><img id="couch-camp-logo" src="asstes/Images/couch camp logo.png" alt="Couch Camp Logo" /></a>Couch Camp</li>
-      <li><a href="#">One</a></li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
-    </ul>
-  </div> -->
-<<<<<<< HEAD
+    <img id="couch-camp-logo" src="" alt="Couch Camp Logo" />
     <div class="top-bar-right">
       <ul class="menu">
-        <li><a href="#">My Account</a></li>
+        <li><a href="#">My Movies</a></li>
         <li><a class="button">Login</a></li>
       </ul>
     </div>
-=======
-  <div class="top-bar-right">
-    <ul class="menu">
-      <li><a href="#">My Movies</a></li>
-      <li><a class="button">Login</a></li>
-    </ul>
->>>>>>> 088ab7e63261f3d42e0acf73277522d42fcf5c1b
-  </div>
 
 
-  <br>
+    <br>
 
-  <div class="row"></div>
+    <div class="row"></div>
 
 
-  <div class="medium-5 large-3 columns">
-    <div class="callout secondary">
-      <form>
-        <div class="row">
-          <div class="small-12 columns">
-            <label>What do you want to watch?
-              <input type="text" placeholder="Search Movies">
-            </label>
-          </div>
-          <div class="small-12 columns">
+    <div class="medium-5 large-3 columns">
+      <div class="callout secondary">
+        <form>
+          <div class="row">
+            <div class="small-12 columns">
+              <label>What do you want to watch?
+                <input type="text" placeholder="Search Movies">
+              </label>
+            </div>
+            <div class="small-12 columns">
               <select id="filters">
                 <option value="search_filters">...</option>
                 <option value="netflix">Netflix</option>
@@ -89,13 +52,13 @@
                 <option value="primevideo">Prime Video</option>
                 <option value="googleplay">Google Play</option>
               </select>
-            </label>
-            <button type="submit" class="button">Search Now!</button>
+              </label>
+              <button type="submit" class="button">Search Now!</button>
+            </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
-  </div>
 
   </div>
 
@@ -103,15 +66,9 @@
     <hr>
   </div>
 
-<<<<<<< HEAD
   <div class="row column">
-    <p class="lead">Trending Planetary Destinations</p>
+    <p class="lead">Search Results:</p>
   </div>
-=======
-<div class="row column">
-  <p class="lead">Search Results:</p>
-</div>
->>>>>>> 088ab7e63261f3d42e0acf73277522d42fcf5c1b
 
   <div class="row small-up-1 medium-up-2 large-up-3">
     <div class="column">
@@ -169,80 +126,8 @@
     <a class="button hollow expanded">Load More</a>
   </div>
 
-<<<<<<< HEAD
   <footer>
-    <!-- <div class="row expanded callout secondary">
-
-    <div class="small-6 large-3 columns">
-      <p class="lead">Offices</p>
-      <ul class="menu vertical">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
-      </ul>
-    </div>
-
-    <div class="small-6 large-3 columns">
-      <p class="lead">Solar Systems</p>
-      <ul class="menu vertical">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
-      </ul>
-    </div>
-
-    <div class="small-6 large-3 columns">
-      <p class="lead">Contact</p>
-      <ul class="menu vertical">
-        <li><a href="#"><i class="fi-social-twitter"></i> Twitter</a></li>
-        <li><a href="#"><i class="fi-social-facebook"></i> Facebook</a></li>
-        <li><a href="#"><i class="fi-social-instagram"></i> Instagram</a></li>
-        <li><a href="#"><i class="fi-social-pinterest"></i> Pinterest</a></li>
-      </ul>
-    </div>
-
-    <div class="small-6 large-3 columns">
-      <p class="lead">Offices</p>
-      <ul class="menu vertical">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
-      </ul>
-    </div> -->
-
-    </div>
-    <div class="row">
-
-      <div class="medium-6 columns">
-        <ul class="menu">
-          <li><a href="#">Legal</a></li>
-          <li><a href="#">Partner</a></li>
-          <li><a href="#">Explore</a></li>
-        </ul>
-      </div>
-
-      <div class="medium-6 columns">
-        <ul class="menu float-right">
-          <li class="menu-text">Copyright</li>
-        </ul>
-      </div>
-    </div>
-
+    <script src="assets/script.js"></script>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-  <script>
-    $(document).foundation();
-  </script>
-  <script src="asstes/script.js"></script>
-</body>
-=======
-<footer>
-</footer>
->>>>>>> 088ab7e63261f3d42e0acf73277522d42fcf5c1b
 
 </html>
