simplified movies cards to accept JS easier

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 <body>
 
   <!-- Navigation -->
-  <div class="title-bar" data-responsive-toggle="header" data-hide-for="small">
-    <button class="menu-icon" type="button" data-toggle></button>
-    <div class="title-bar-title">Menu</div>
-  </div>
 
   <div class="top-bar" id="header">
     <img id="couch-camp-logo" src="" alt="Couch Camp Logo" />
@@ -72,51 +68,45 @@
 
   <div class="row small-up-1 medium-up-2 large-up-3">
     <div class="column">
-      <div class="callout">
-        <p>Pegasi B</p>
-        <p><img src="" alt="image of a planet called Pegasi B"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      <div id="moive_card" class="callout">
+        <p>"movie title placeholder"</p>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div class="column">
+    <div id="moive_card" class="column">
       <div class="callout">
-        <p>Pegasi B</p>
-        <p><img src="" alt="image of a planet called Pegasi B"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+        <p>"movie title placeholder"</p>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div class="column">
+    <div id="moive_card" class="column">
       <div class="callout">
-        <p>Pegasi B</p>
-        <p><img src="" alt="image of a planet called Pegasi B"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+        <p>"movie title placeholder"</p>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div class="column">
+    <div id="moive_card" class="column">
       <div class="callout">
-        <p>Pegasi B</p>
-        <p><img src="" alt="image of a planet called Pegasi B"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+        <p>"movie title placeholder"</p>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div class="column">
+    <div id="moive_card" class="column">
       <div class="callout">
-        <p>Pegasi B</p>
-        <p><img src="" alt="image of a planet called Pegasi B"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+        <p>"movie title placeholder"</p>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div class="column">
+    <div id="moive_card" class="column">
       <div class="callout">
-        <p>Pegasi B</p>
+        <p>"movie title placeholder"</p>
         <p><img src="" alt="image of a planet called Pegasi B"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+        <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
 
