--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Couch Camp</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  <link rel="stylesheet" href="asstes/style.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="small-12 columns">
               <label>What do you want to watch?
-                <input type="text" placeholder="Search Movies">
+                <input id="name" type="text" placeholder="Search Movies">
               </label>
             </div>
             <div class="small-12 columns">
@@ -53,7 +53,7 @@
                 <option value="googleplay">Google Play</option>
               </select>
               </label>
-              <button type="submit" class="button">Search Now!</button>
+              <button type="submit" id="search">Search Now!</button>
             </div>
           </div>
         </form>
