--- a/index.html
+++ b/index.html
@@ -1,68 +1,26 @@
 <!doctype html>
 <html class="no-js" lang="en">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Couch Camp</title>
-  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="assets/style.css">
-</head>
-
-<style>
-
-:root{
-    --dark-blue: #264653;
-    --blue: #2a9d8f;
-    --yellow: #e9c46a;
-    --orange: #f4a261;
-    --dark-orange: #e76f51;
-}
-
-#header{
-  background-color: var(--dark-orange);
-  border: 4px solid var(--yellow);
-}
-
-.button{
-color: white;
-background-color: var(--yellow);
-}
-
-#movie_card{
-border: 10px solid var(--dark-blue);
-border-color: var(--blue);
-font-family: Trebuchet MS, sans-serif;
-background-color: var(--blue);
-
-}
-
-#search_results_txt{
-  font-size: large;
+  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   
-}
-
-#load_more{
-  color: white;
-  background-color: var(--dark-blue);
-  margin-top: 15px;
-}
-
-</style>
-
-
+</head>
 <body>
 
   <!-- Navigation -->
-
-  <div class="top-bar" id="header">
-    <img id="couch-camp-logo" src="" alt="Couch Camp Logo" />
-    <div class="top-bar-right">
-      <ul class="menu">
-        <li><a class="button" href="#">My Movies</a></li>
-        <li><a class="button">Login</a></li>
-      </ul>
-    </div>
+      <nav>
+        <div class="top-bar" id="header">
+          <img id="couch-camp-logo" src="" alt="Couch Camp Logo" />
+          <div class="top-bar-right">
+            <ul class="menu">
+              <li><a class="button" href="#">My Movies</a></li>
+              <li><a class="button">Login</a></li>
+            </ul>
+          </div>
+      </nav>
 
 
     <br>
@@ -91,7 +49,7 @@ background-color: var(--blue);
                 <option value="googleplay">Google Play</option>
               </select>
               </label>
-              <button type="submit" id="search">Search Now!</button>
+              <button type="submit" class="button">Search Now!</button>
             </div>
           </div>
         </form>
