getting new updates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <option value="googleplay">Google Play</option>
               </select>
               </label>
-              <button type="submit" class="button">Search Now!</button>
+              <button id = "search" type="submit" class="button">Search Now!</button>
             </div>
           </div>
         </form>
