Added dynamic code for HTML cards to display movie title and review link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Couch Camp</title>
-  <link rel="stylesheet" href="assets/style.css">
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
@@ -30,13 +30,6 @@
   <div class="row"></div>
 
 
-
-  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  
-</head>
-
-<body>
-
   <div class="medium-5 large-3 columns">
     <div class="callout secondary">
       <form>
@@ -46,8 +39,6 @@
               <input id="name" type="text" placeholder="Search Movies">
             </label>
           </div>
-<<<<<<< HEAD
-=======
 
       </nav>
 
@@ -57,7 +48,7 @@
     <div class="row"></div>
 
 
-    <div class="medium-5 large-3 columns">
+    <!-- <div class="medium-5 large-3 columns">
       <div class="callout secondary">
         <form>
           <div class="row">
@@ -79,9 +70,8 @@
               </select>
               </label>
               <button id = "search" type="submit" class="button">Search Now!</button>
-            </div>
+            </div> -->
 
->>>>>>> 48f5f9092d7344816feb55791d8b94baa714598b
           <div class="small-12 columns">
             <select id="filters">
               <option value="search_filters">...</option>
@@ -111,49 +101,51 @@
     <p id="search_results_txt" class="lead">Search Results:</p>
   </div>
 
-  <div class="row small-up-1 medium-up-2 large-up-3">
-    <div id="movie_card" class="column">
+  <div class="row small-up-1 medium-up-2 large-up-3" id="card_row">
+    <!-- <div class="movie_card" class="column"> 
       <div class="callout">
-        <h4 id="movie-title">"movie title placeholder"</h4>
+        <h4 class="movie-title">"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
+    <div class="movie_card" class="column">
+      <div class="callout">
+        <h4>"movie title placeholder"</h4>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
+      </div>
+    </div> -->
+​
+  </div>
 
   </div>
 
