--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Couch Camp</title>
-  <link rel="stylesheet" href="assets/style.css">
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
@@ -15,13 +15,14 @@
   <!-- Navigation -->
   <nav>
     <div class="top-bar" id="header">
-      <img id="couch-camp-logo" src="" alt="Couch Camp Logo" />
       <div class="top-bar-right">
+        
         <ul class="menu">
-          <li><a class="button" href="#">My Movies</a></li>
-          <li><a class="button">Login</a></li>
+          <a class="button" href="#">My Movies</a>
+          <a class="button">Login</a>
         </ul>
       </div>
+      <h6>Couch Camp</h6>
   </nav>
 
 
@@ -29,13 +30,6 @@
 
   <div class="row"></div>
 
-
-
-  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  
-</head>
-
-<body>
 
   <div class="medium-5 large-3 columns">
     <div class="callout secondary">
@@ -53,9 +47,10 @@
     <br>
 
     <div class="row"></div>
+    
 
 
-    <div class="medium-5 large-3 columns">
+    <!-- <div class="medium-5 large-3 columns">
       <div class="callout secondary">
         <form>
           <div class="row">
@@ -77,7 +72,7 @@
               </select>
               </label>
               <button id = "search" type="submit" class="button">Search Now!</button>
-            </div>
+            </div> -->
 
           <div class="small-12 columns">
             <select id="filters">
@@ -97,6 +92,8 @@
       </form>
     </div>
   </div>
+  <h5><img id="couch-camp-logo" src="assets\Images\couch camp logo.png" alt="Couch Camp" /> Calling all Couch Potatoes!! Struggling on what to watch? Let us help you decide with our universal search app.
+  </h5>
 
   </div>
 
@@ -108,49 +105,51 @@
     <p id="search_results_txt" class="lead">Search Results:</p>
   </div>
 
-  <div class="row small-up-1 medium-up-2 large-up-3">
-    <div id="movie_card" class="column">
+  <div class="row small-up-1 medium-up-2 large-up-3" id="card_row">
+    <!-- <div class="movie_card" class="column"> 
       <div class="callout">
-        <h4 id="movie-title">"movie title placeholder"</h4>
+        <h4 class="movie-title">"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
-    <div id="movie_card" class="column">
+    <div class="movie_card" class="column">
       <div class="callout">
         <h4>"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
       </div>
     </div>
+    <div class="movie_card" class="column">
+      <div class="callout">
+        <h4>"movie title placeholder"</h4>
+        <p><img src="" alt="image of movie poster"></p>
+        <p class="lead">"movie description placeholder"</p>
+      </div>
+    </div> -->
+​
+  </div>
 
   </div>
 
