--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </form>
     </div>
   </div>
-  <h5><img id="couch-camp-logo" src="assets\Images\couch camp logo.png" alt="Couch Camp" /> Calling all Couch Potatoes!! Struggling on what to watch? Let us help you decide with our universal search app.
+  <h5><img id="couch-camp-logo" src="assets\Images\couch camp logo.png" alt="Couch Camp" /> Calling all Couch Potatoes!! Struggling with finding what to watch or seeing if the streaming service you have provides your movie? Let us help you decide with our universal search app just type in a movie and providers as well as reveiws of the movie is just a click away.
   </h5>
 
   </div>
