--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <div class="top-bar" id="header">
       <div class="top-bar-right">
-        
+
         <ul class="menu">
           <a class="button" href="#">My Movies</a>
           <a class="button">Login</a>
@@ -41,38 +41,12 @@
             </label>
           </div>
 
-      </nav>
+          </nav>
 
 
-    <br>
+          <br>
 
-    <div class="row"></div>
-    
-
-
-    <!-- <div class="medium-5 large-3 columns">
-      <div class="callout secondary">
-        <form>
-          <div class="row">
-            <div class="small-12 columns">
-              <label>What do you want to watch?
-                <input id="name" type="text" placeholder="Search Movies">
-              </label>
-            </div>
-            <div class="small-12 columns">
-              <select id="filters">
-                <option value="search_filters">...</option>
-                <option value="netflix">Netflix</option>
-                <option value="appletv">Apple TV +</option>
-                <option value="disneyplus">Disney+</option>
-                <option value="peacock">Peacock</option>
-                <option value="hbomax">HBOmax</option>
-                <option value="primevideo">Prime Video</option>
-                <option value="googleplay">Google Play</option>
-              </select>
-              </label>
-              <button id = "search" type="submit" class="button">Search Now!</button>
-            </div> -->
+          <div class="row"></div>
 
           <div class="small-12 columns">
             <select id="filters">
@@ -92,7 +66,8 @@
       </form>
     </div>
   </div>
-  <h5><img id="couch-camp-logo" src="assets\Images\couch camp logo.png" alt="Couch Camp" /> Calling all Couch Potatoes!! Struggling on what to watch? Let us help you decide with our universal search app.
+  <h5><img id="couch-camp-logo" src="assets\Images\couch camp logo.png" alt="Couch Camp" /> Calling all Couch Potatoes!!
+    Struggling on what to watch? Let us help you decide with our universal search app.
   </h5>
 
   </div>
@@ -111,44 +86,8 @@
         <h4 class="movie-title">"movie title placeholder"</h4>
         <p><img src="" alt="image of movie poster"></p>
         <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div class="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div class="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div class="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div class="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div>
-    <div class="movie_card" class="column">
-      <div class="callout">
-        <h4>"movie title placeholder"</h4>
-        <p><img src="" alt="image of movie poster"></p>
-        <p class="lead">"movie description placeholder"</p>
-      </div>
-    </div> -->
-​
+      </div>  -->
+    ​
   </div>
 
   </div>
